[package]
name = "articulate"
version = "0.1.0"
authors = ["Vihaan Shah"]
edition = "2024"
description = "Type-safe robotics kinematics library (early development)"
license = "MIT"
repository = "https://github.com/ShahhhVihaan/articulate"
readme = "README.md"
keywords = ["robotics", "kinematics"]

[dependencies]
